add exception and fix some bugs
Signed-off-by: vopn010202 <namvo.010202@gmail.com>